k8s/sql-server.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: geocachefriends
  name: geocachefriends
spec:
  volumes:
    - name: sqldata-storage
      persistentVolumeClaim:
        claimName: dbclaim
  containers:
  - image: mcr.microsoft.com/mssql/server
    name: geocachefriends
    ports:
    - containerPort: 1433
      name: geocachefriends
    volumeMounts:
    - mountPath: "/var/opt/mssql/data"
      name: sqldata-storage
---
apiVersion: v1
kind: Service
metadata:
   name: geocachefriends
spec:  
  type: NodePort
  ports:
  - port: 1433 
    nodePort: 31433
  selector:
    run: geocachefriends
