k8s/create-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: laurijssen.local
    http:
      paths:
        - path: /http1
          backend:
            serviceName: http-deployment1
            servicePort: 8080
        - path: /http2
          backend:
            serviceName: http-deployment2
            servicePort: 8080
